Update deployment script to include optional token-based authentication, enhance README with authentication configuration details, and modify .example.env for clarity.

--- a/.example.env
+++ b/.example.env
@@ -15,6 +15,10 @@ GROQ_API_KEY=your-groq-api-key-here
 # TOGETHER_API_KEY=your-together-api-key-here
 # REPLICATE_API_TOKEN=your-replicate-token-here
 
+# Authentication Token (required only if ENABLE_AUTH=True in agno_modal_deploy.py)
+# Uncomment and set this if you enabled authentication in the configuration
+# AUTH_TOKEN=your-super-secret-deployment-token-here
+
 # Custom environment variables for your agent
 # DATABASE_URL=your-database-url-here
 # REDIS_URL=your-redis-url-here
